--- a/LootHistory2/Web.config
+++ b/LootHistory2/Web.config
@@ -71,6 +71,11 @@
     </compilers>
   </system.codedom>
   <entityFramework>
+      <contexts>
+          <context type="LootHistory2.Data.LootContext, LootHistory2">
+              <databaseInitializer type=""
+          </context>
+      </contexts>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
         <parameter value="mssqllocaldb" />
